# middleware

./: .editorconfig  .gitattributes  .gitignore  ACTION_SERVER_README.md  CHANGELOG.md  CONTRIBUTING.md  Middleware.sln  Middleware.sln.DotSettings  OpenAPISpec.json  README.md  action-server-docker-compose.yml  build.sh  deploy.sh  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml  global.json  launchSettings.json  middleware_deployment.yaml  qodana.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  research_report.md
.github/workflows/: centralapi_docker.yml  centralapi_docker_tag.yml  clear_untagged_packages.yml  codeql.yml  commitlint.yml  dotnet_build_test.yml  gateway_docker.yml  gateway_docker_tag.yml  linting.yml  orchestrator_docker.yml  orchestrator_docker_tag.yml  redis_interface_docker_build.yml  redis_interface_docker_build_tag.yml  release-please.yml  resource_planner_docker.yml  resource_planner_docker_tag.yml  task_planner_docker.yml  task_planner_docker_build.yml  task_planner_docker_build_tag.yml
.run/: docker-compose.run.xml
docs/: readme.md
docs/0_Where_To_Start/: Copy of Where to Start Documentation.docx  Document for resource planner (Replanning scenario) to complete a task.docx  readme.md
docs/2_NetApp/: Design_NetApp_Guideline.md
docs/Administrator/: Actionserver.md  Middleware_Installation.md  NetworkApplicationCommunication.md  System Architecture.md  readme.md  system_architecture.md
docs/DDS/: CycloneDDS_DiscoveryServer.txt
docs/Developer/: OSM_installation_and_configuration.md  readme.md  task_planner_interface.md  unit_testing_and_integration_testing.md
docs/NetApp/: Design_NetApp_Guideline.md
docs/Proposals/: Feature79Proposal.md  RobotHeartbeatIntegration.md  RobotTaskOntology.md
docs/QA/: Quality control.docx  Test-Template.xlsx  quality-assurance-checklist.doc  system-integration-test-scenario.xls  test-case-report-template.doc  test-strategy-template.doc  testing-protocol.doc  testing_plan.rtf
docs/Tutorials/: Consume_networkApplication_with_robot.md  Creating a new user.md  Deploying the netapp.md  Importing a new task definition.md  Onboarding new cloud or edge.md  onboarding_simulated_robot.md  readme.md
docs/User/: NetApp_design_guidelines.md  Policies.md  Readme.md  planning_flowchart.md
docs/Where to start/: PublicroadmapoftheProject.md
docs/Where_to_start/: ENVIRONMENT.md  Glosary.md  readme.md  roadmap.md
docs/misc/: House_Ontology  Juju configuration.md
docs/robot_onboarding/: readme.md
docs/testing/: middleware-testing.md  relay-client-resting.md
k8s/: flatten_yaml_to_json_string.py  middleware_deployment.yaml  middleware_service.yaml  orchestrator_cluster_role.yaml  orchestrator_cluster_role_binding.yaml
k8s/central-api/: central-api-service.yaml  central-api.yaml  config.sh
k8s/cluster-config/: multus_config.yaml  orchestrator_cluster_role.yaml  orchestrator_cluster_role_binding.yaml  orchestrator_role.yaml  orchestrator_role_binding.yaml  orchestrator_service_account.yaml
k8s/gateway/: gateway_deployment.yaml  gateway_service.yaml
k8s/orchestrator/: awscli-pod.yaml  credentials.sh  delete.sh  delete_all.sh  deploy.sh  middleware-aws.yaml  orchestrator.yaml  orchestrator_deployment.yaml  orchestrator_service.yaml  port-forward.sh  role.yaml  role_binding.yaml  update.sh
k8s/redis-interface/: redis_interface_deployment.yaml  redis_interface_service.yaml
k8s/task-planner/: task_planner_deployment.yaml  task_planner_service.yaml
operators/cloud-storage-operator/: .flake8  .jujuignore  CONTRIBUTING.md  README.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  (+2 more)
src/: Dockerfile
src/era_5g_action_client_ros1/: CMakeLists.txt  README.md  package.xml
src/era_5g_action_client_ros1/action/: goal_5g.action
src/era_5g_action_client_ros1/scripts/: README.md  era-5g-action-client-script.py  era_5g_action_client_script.py
src/era_5g_action_interfaces_ros1/: CMakeLists.txt  README.md  package.xml
src/era_5g_action_interfaces_ros1/action/: goal_5g.action
src/era_5g_action_server_ros1/: CMakeLists.txt  package.xml
src/era_5g_action_server_ros1/scripts/: README.md  era_5g_action_server_5g_action_server_script.py  era_5g_action_server_script.py  prueba
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tf
util/: MetricToExcel.py  deployment.yaml  flatten_yaml_to_json_string.py  merge_open_api_spec.py  onboardingRobot.sh  onboardingRobotB.sh  onboardingRobotFunciona.sh  onboarding_robot.md  onboarding_robot.py  onboarding_robot_ros2.py  outputMeasurements.xlsx  readBag.py  requirements.txt  service.yaml
(+1190 files in other folders)
